--- a/app/components/rental.hbs
+++ b/app/components/rental.hbs
@@ -1,21 +1,22 @@
 <article class="rental">
-  <Rental::Image
-    src={{@rental.image}}
-    alt="A picture of {{@rental.title}}"
-  />
+  <Rental::Image src={{@rental.image}} alt="A picture of {{@rental.title}}" />
   <div class="details">
     <h3>{{@rental.title}}</h3>
     <div class="detail owner">
-      <span>Owner:</span> {{@rental.owner}}
+      <span>Owner:</span>
+      {{@rental.owner}}
     </div>
     <div class="detail type">
-      <span>Type:</span> {{@rental.type}}
+      <span>Type:</span>
+      {{@rental.type}}
     </div>
     <div class="detail location">
-      <span>Location:</span> {{@rental.city}}
+      <span>Location:</span>
+      {{@rental.city}}
     </div>
     <div class="detail bedrooms">
-      <span>Number of bedrooms:</span> {{@rental.bedrooms}}
+      <span>Number of bedrooms:</span>
+      {{@rental.bedrooms}}
     </div>
   </div>
   <Map
