--- a/app/components/rentals.hbs
+++ b/app/components/rentals.hbs
@@ -1,9 +1,10 @@
 <div class="rentals">
-  <form>
+  <form {{on "input" this.updateQuery}} {{on "submit" this.handleSubmit}}>
     <label>
       <span>Where would you like to stay?</span>
-      <input class="light" />
+      <input name="rental-search-term" class="light">
     </label>
+    <p>The results below will update as you type.</p>
   </form>
 
   <ul class="results">
